@@ -27,39 +27,39 @@ import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.shared.string.CIKey;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
 public class ConditionalFormattingRowCreator extends FilteredRowCreator {
 
     private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(ConditionalFormattingRowCreator.class);
 
-    private final ExpressionOperator rowFilter;
-    private final List<ConditionalFormattingRule> rules;
-    private final ColumnExpressionMatcher expressionMatcher;
+    private final Predicate<Map<CIKey, Object>> rowFilter;
+    private final List<RuleAndMatcher> rules;
+    private final ErrorConsumer errorConsumer;
 
     private ConditionalFormattingRowCreator(final List<Column> originalColumns,
                                             final List<Column> newColumns,
                                             final ColumnFormatter columnFormatter,
                                             final KeyFactory keyFactory,
-                                            final ExpressionOperator rowFilter,
-                                            final List<ConditionalFormattingRule> rules,
-                                            final ColumnExpressionMatcher expressionMatcher,
+                                            final Predicate<Map<CIKey, Object>> rowFilter,
+                                            final List<RuleAndMatcher> rules,
                                             final ErrorConsumer errorConsumer) {
-        super(originalColumns, newColumns, columnFormatter, keyFactory, rowFilter, expressionMatcher, errorConsumer);
+        super(originalColumns, newColumns, columnFormatter, keyFactory, rowFilter, errorConsumer);
 
         this.rowFilter = rowFilter;
         this.rules = rules;
-        this.expressionMatcher = expressionMatcher;
+        this.errorConsumer = errorConsumer;
     }
 
     public static Optional<ItemMapper<Row>> create(final List<Column> originalColumns,
                                                    final List<Column> newColumns,
                                                    final ColumnFormatter columnFormatter,
                                                    final KeyFactory keyFactory,
-                                                   final ExpressionOperator rowFilter,
+                                                   final ExpressionOperator rowFilterExpression,
                                                    final List<ConditionalFormattingRule> rules,
                                                    final DateTimeSettings dateTimeSettings,
                                                    final ErrorConsumer errorConsumer) {
@@ -68,19 +68,32 @@ public class ConditionalFormattingRowCreator extends FilteredRowCreator {
             final List<ConditionalFormattingRule> activeRules = rules
                     .stream()
                     .filter(ConditionalFormattingRule::isEnabled)
-                    .collect(Collectors.toList());
-            if (activeRules.size() > 0) {
-                final ColumnExpressionMatcher expressionMatcher =
-                        new ColumnExpressionMatcher(newColumns, dateTimeSettings);
-                return Optional.of(new ConditionalFormattingRowCreator(
-                        originalColumns,
-                        newColumns,
-                        columnFormatter,
-                        keyFactory,
-                        rowFilter,
-                        activeRules,
-                        expressionMatcher,
-                        errorConsumer));
+                    .toList();
+            if (!activeRules.isEmpty()) {
+                final Optional<RowExpressionMatcher> optionalRowExpressionMatcher =
+                        RowExpressionMatcher.create(newColumns, dateTimeSettings, rowFilterExpression);
+                final Predicate<Map<CIKey, Object>> rowFilter = optionalRowExpressionMatcher
+                        .map(orem -> (Predicate<Map<CIKey, Object>>) orem)
+                        .orElse(RowExpressionMatcher.ALWAYS_TRUE_PREDICATE);
+
+                final List<RuleAndMatcher> ruleAndMatchers = new ArrayList<>();
+                for (final ConditionalFormattingRule rule : rules) {
+                    final Optional<RowExpressionMatcher> optionalRuleFilter =
+                            RowExpressionMatcher.create(newColumns, dateTimeSettings, rule.getExpression());
+                    optionalRuleFilter.ifPresent(columnExpressionMatcher ->
+                            ruleAndMatchers.add(new RuleAndMatcher(rule, columnExpressionMatcher)));
+                }
+
+                if (optionalRowExpressionMatcher.isPresent() || !ruleAndMatchers.isEmpty()) {
+                    return Optional.of(new ConditionalFormattingRowCreator(
+                            originalColumns,
+                            newColumns,
+                            columnFormatter,
+                            keyFactory,
+                            rowFilter,
+                            ruleAndMatchers,
+                            errorConsumer));
+                }
             }
         }
 
@@ -111,24 +124,21 @@ public class ConditionalFormattingRowCreator extends FilteredRowCreator {
 
         try {
             // See if we can exit early by applying row filter.
-            if (rowFilter != null) {
-                if (!expressionMatcher.match(fieldIdToValueMap, rowFilter)) {
-                    return null;
-                }
+            if (!rowFilter.test(fieldIdToValueMap)) {
+                return null;
             }
 
-            for (final ConditionalFormattingRule rule : rules) {
+            for (final RuleAndMatcher ruleAndMatcher : rules) {
                 try {
-                    final ExpressionOperator operator = rule.getExpression();
-                    final boolean match = expressionMatcher.match(fieldIdToValueMap, operator);
+                    final boolean match = ruleAndMatcher.matcher.test(fieldIdToValueMap);
                     if (match) {
-                        matchingRule = rule;
+                        matchingRule = ruleAndMatcher.rule;
                         break;
                     }
                 } catch (final RuntimeException e) {
                     final RuntimeException exception = new RuntimeException(
                             "Error applying conditional formatting rule: " +
-                                    rule.toString() +
+                                    ruleAndMatcher.rule.toString() +
                                     " - " +
                                     e.getMessage());
                     LOGGER.debug(exception.getMessage(), exception);
@@ -169,8 +179,7 @@ public class ConditionalFormattingRowCreator extends FilteredRowCreator {
         return row;
     }
 
-    @Override
-    public boolean hidesRows() {
-        return true;
+    private record RuleAndMatcher(ConditionalFormattingRule rule, RowExpressionMatcher matcher) {
+
     }
 }
